--- a/PAGINA/pages/sobre-nosotros.html
+++ b/PAGINA/pages/sobre-nosotros.html
@@ -74,12 +74,12 @@
               </div>
         </div>
         
-        <div class="accordion accordion-flush cuadropreguntas" id="accordionFlushExample">
+        <div class="accordion accordion-flush cuadropreguntas " id="accordionFlushExample ">
             <hr>
         <h2 class="titulo2">Preguntas frecuentes</h2>
-            <div class="accordion-item">
+            <div class="accordion-item ">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                <button class="accordion-button collapsed coloritem" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                     ¿Cómo buscar alojamientos en Ida y vuelta?
                 </button>
               </h2>
@@ -88,8 +88,8 @@
               </div>
             </div>
             <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              <h2 class="accordion-header ">
+                <button class="accordion-button collapsed coloritem" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                     ¿Cómo reservar alojamientos por Ida y vuelta?
                 </button>
               </h2>
@@ -97,9 +97,9 @@
                 <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis repellat atque ex sint molestiae. Ex quo maxime laudantium eaque facilis totam, harum, provident sequi nulla, voluptatibus consequuntur alias odio rerum!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio reiciendis voluptatum, nihil dolorum sequi laborum nemo rem! Deleniti vero ut magni illum esse consequuntur facilis quam et, alias provident similique. <a href="./reservas.html"> Tu reserva!</a></div>
               </div>
             </div>
-            <div class="accordion-item">
+            <div class="accordion-item ">
               <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                <button class="accordion-button collapsed coloritem" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                     ¿Qué hoteles aceptan mascotas?
                 </button>
               </h2>
